Run db in docker

--- a/music-service/src/main/resources/application.yaml
+++ b/music-service/src/main/resources/application.yaml
@@ -10,3 +10,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+  music:
+    file:
+      path: /music
+  text:
+    file:
+      path: /texts
